--- a/nets.tex
+++ b/nets.tex
@@ -94,7 +94,7 @@ Show that if $X$ is Hausdorff, a net in $X$ converges to at most one point.
 
 \section{Continuity}
 \begin{thm}
-	Let $f: X \to Y$. Then $f$ is continuous if and only if for every convergent net $(x_\alpha)$ in $X$ converging to a pooint $x$, the net $\big(f(a_\alpha)\big)$ converges to $f(x)$.
+	Let $f: X \to Y$. Then $f$ is continuous if and only if for every convergent net $(x_\alpha)$ in $X$ converging to a point $x$, the net $\big(f(a_\alpha)\big)$ converges to $f(x)$.
 \end{thm}
 \begin{proof}
 	\todo{Prove.}
