I think I finished the first problem

--- a/nets.sty
+++ b/nets.sty
@@ -9,6 +9,7 @@
 \usepackage{booktabs}
 \usepackage{cancel}
 \usepackage{color}
+\usepackage{enumitem}
 \usepackage{eqparbox}
 \usepackage{float}
 \usepackage[margin=1in,left=2in]{geometry}
