--- a/nets.tex
+++ b/nets.tex
@@ -7,9 +7,7 @@
 \begin{document}
 \maketitle
 
-\begin{abstract}
-    We have already seen that sequences are ``adequate'' to detect limit points, continuous functions, and compact sets in metrizable spaces. There is a generalization of the notion of a sequence, called a \textit{net}, that will do the same for an arbitrary topological space.
-\end{abstract}
+We have already seen that sequences are ``adequate'' to detect limit points, continuous functions, and compact sets in metrizable spaces. There is a generalization of the notion of a sequence, called a \textit{net}, that will do the same for an arbitrary topological space.
 
 \section{Directed Sets}
 \begin{defn}
@@ -59,29 +57,17 @@ Show the following are directed sets.
 
     \item The collection of all subsets of a set $S$, partially ordered by inclusion. That is, $A \preceq B$ if $A \subset B$.
           \begin{proof}
-              Let $A, B, C \subset S$.
-              \begin{enumerate}
-                  \item Clearly, $A \subset A$.
-                  \item Suppose $A \subset B$ and $B \subset A$. Then $A = B$ by the definition of set equality.
-                  \item Suppose $A \subset B$ and $B \subset C$, then $A \subset C$.
-              \end{enumerate}
-              So then $\subset$ is a partial order on the powerset of $S$.
+            Let $A, B \in \mathcal P(S)$. We wish to show that $\mathcal P(S)$ is directed, that is, that there exists a $C \in \mathcal P(S)$ with $A \subset C$ and $B \subset C$.
           \end{proof}
 
     \item The collection $\mathcal A$ of subsets of $S$ that is closed under finite intersections, partially ordered by reverse inclusion. That is, $A \preceq B$ if $A \supset B$.
           \begin{proof}
-              Let $\mathcal A$ be a collection of subsets of a set $S$ that is closed under finite intersections. That is, if $A_1, \dots, A_n \in \mathcal A$, then $\bigcap_{i = 1}^n A_i \in \mathcal A$. Suppose $A, B, C \in \mathcal A$.\todo{I don't see how to use the hypothesis that $\mathcal A$ is closed under finite intersections.}
-
-              \begin{enumerate}
-                  \item Clearly, $A \supset A$.
-                  \item Suppose $A \supset B$ and $B \supset A$. Then $A = B$ by the definition of set equality.
-                  \item Suppose $A \supset B$ and $B \supset C$. Then $C \subset B$ and $B \subset A$, so $C \subset A$, or rather, $A \supset C$.
-              \end{enumerate}
-              Thus $\supset$ is a partial ordering on $\mathcal A$.
+            Let $A, B \in \mathcal A$. We wish to show that $\mathcal A$ is directed. That is, that there exists a $C \in \mathcal A$ with $A \supset C$ and $B \supset C$.
           \end{proof}
 
     \item The collection of all closed subsets of a space $X$, partially ordered by inclusion.
           \begin{proof}
+            Let $\mathcal A$ be the collection of all closed subsets of a space $X$. Let $A, B \in \mathcal A$. We wish to show that $\mathcal A$ is directed. That is, that there exists a $C \in \mathcal A$ with $A \subset C$ and $B \subset C$.
           \end{proof}
 \end{enumerate}
 
