--- a/nets.tex
+++ b/nets.tex
@@ -44,17 +44,7 @@ Show the following are directed sets.
 				            \item $a \leq a$ is trivially true, because $a = a$!
 				            \item Let $a \leq b$ and $b \leq a$. Because $A$ is simply ordered, $a
 					                  < b$ and $b < a$ cannot hold, so the only other possibility is that $a = b$.
-				            \item Let $a \leq b$ and $b \leq c$. Then proceed by cases.
-				                  \begin{itemize}
-					                  \item[case $a < b$ and $b < c$:] Then $a < c$ (and thus $a
-						                        \leq c$) because $A$ is simply ordered.
-					                  \item[case $a = b$ and $b = c$:] Then $a = c$ (and thus $a
-						                        \leq c$).
-					                  \item[case $a = b$ and $b < c$:] Then $a < c$ (and thus $a
-						                        \leq c$).
-					                  \item[case $a < b$ and $b = c$:] Then $a < c$ (and thus $a
-						                        \leq c$).
-				                  \end{itemize}
+				            \item Let $a \leq b$ and $b \leq c$. Then clearly $a \leq c$.
 			            \end{enumerate}
 			            So therefore $A$ is partially ordered by $\leq$.
 			      \item\label{pf:part-directed} For every $a, b \in A$ there exists a $c \in A$
